# gaggimate

./: .clabot  .dockerignore  .gitignore  AGENTS.md  BUGFIXES.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CURRENT_STATE.md  FLASHER_README.md  GAGGIGO_DEV_NOTES.md  GITHUB_PAGES_SETUP.md  HANDOFF.md  Makefile  PRODUCT.md  README.md  ROADMAP.md  flake.nix  flash.sh  gaggimate-feat-live-weight-brew-screen.patch  hot payloads into cache  index.html  partitions_8MB.csv  platformio.ini  pr_comment.md  pr_update.md  sdkconfig.common.defaults  sdkconfig.controller.defaults  sdkconfig.defaults  sdkconfig.gaggimate.defaults  sdkconfig.matter.defaults  serve_flasher.py  start_flasher.bat  tailwind.config.js
src/: CMakeLists.txt  idf_component.yml  version.h
src/controller/: main.cpp  main.h
src/display/: Settings.cpp  Settings.h  lv_conf.h  main.cpp  main.h
src/display/core/: BLECoordinator.cpp  BLECoordinator.h  Controller.cpp  Controller.h  MemoryMonitor.cpp  MemoryMonitor.h  Process.h  ProfileManager.cpp  ProfileManager.h  Settings.cpp  Settings.h  SystemInfo.h  Translation.cpp  Translation.h  TranslationStrings.cpp  TranslationStrings.h  WifiManager.cpp  WifiManager.h  brew_target.cpp  brew_target.h  constants.h  helperfunctions.h  predictive.h  static_profiles.h  utils.cpp  utils.h
src/display/drivers/: AmoledDisplayDriver.cpp  AmoledDisplayDriver.h  Driver.h  LilyGoDriver.cpp  LilyGoDriver.h  LilyGoTDisplayDriver.cpp  LilyGoTDisplayDriver.h  MaTouch21Driver.cpp  MaTouch21Driver.h  WaveshareDriver.cpp  WaveshareDriver.h  WaveshareLCDDriver.cpp  WaveshareLCDDriver.h
src/display/models/: profile.h  shot_log_format.h
src/display/plugins/: AutoWakeupPlugin.cpp  AutoWakeupPlugin.h  BLEScalePlugin.cpp  BLEScalePlugin.h  BeanconquerorPlugin.cpp  BeanconquerorPlugin.h  CleaningSchedulePlugin.cpp  CleaningSchedulePlugin.h  DebugLogPlugin.cpp  DebugLogPlugin.h  HardwareScalePlugin.cpp  HardwareScalePlugin.h  HomekitBridgePlugin.cpp  (+22 more)
(+777 files in other folders)
